--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,11 @@
 {
+  "extends": [
+    "eslint:recommended"
+  ],
   "parser": "babel-eslint",
+  "plugins": [
+    "react"
+  ],
   "rules": {
     "strict": 0
   }
