--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Redux shopping-cart example",
   "scripts": {
     "start": "node server.js",
-    "lint": "eslint --ext .js --ext .jsx ./",
+    "lint": "node_modules/.bin/eslint --ext .js --ext .jsx ./**/*",
     "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register",
     "test:watch": "npm test -- --watch"
   },
@@ -18,29 +18,46 @@
   },
   "homepage": "http://redux.js.org",
   "dependencies": {
-    "babel-polyfill": "^6.3.14",
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.7.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-runtime": "^6.6.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-facebook-login": "^2.1.3",
     "react-redux": "^4.2.1",
+    "react-router": "^2.0.1",
+    "react-router-redux": "^4.0.0",
     "redux": "^3.2.1",
     "redux-thunk": "^1.0.3"
   },
   "devDependencies": {
-    "babel-core": "^6.3.15",
+    "babel-core": "^6.7.2",
     "babel-eslint": "^6.0.0-beta.6",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-check-es2015-constants": "^6.7.2",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.5.2",
+    "babel-plugin-transform-es2015-block-scoping": "^6.7.1",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
     "cross-env": "^1.0.7",
     "enzyme": "^2.0.0",
     "eslint": "^2.4.0",
+    "eslint-plugin-react": "^4.2.3",
     "express": "^4.13.3",
     "json-loader": "^0.5.3",
     "mocha": "^2.2.5",
     "node-libs-browser": "^0.5.2",
     "react-addons-test-utils": "^0.14.7",
-    "redux-logger": "^2.0.1",
+    "redux-devtools": "^3.1.1",
+    "redux-devtools-dock-monitor": "^1.1.0",
+    "redux-devtools-log-monitor": "^1.0.5",
+    "redux-logger": "^2.6.1",
+    "redux-promise": "^0.5.3",
     "webpack": "^1.9.11",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.9.1"
