--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-runtime": "^6.6.1",
     "react": "^0.14.7",
+    "react-bootstrap": "^0.28.4",
     "react-dom": "^0.14.7",
     "react-facebook-login": "^2.1.3",
     "react-redux": "^4.2.1",
@@ -33,6 +34,7 @@
     "redux-thunk": "^1.0.3"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.5",
     "babel-core": "^6.7.2",
     "babel-eslint": "^6.0.0-beta.6",
     "babel-loader": "^6.2.4",
@@ -45,19 +47,25 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "cross-env": "^1.0.7",
+    "css-loader": "^0.23.1",
     "enzyme": "^2.0.0",
     "eslint": "^2.4.0",
     "eslint-plugin-react": "^4.2.3",
     "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^1.0.1",
     "json-loader": "^0.5.3",
     "mocha": "^2.2.5",
     "node-libs-browser": "^0.5.2",
+    "postcss": "^5.0.19",
+    "postcss-loader": "^0.8.2",
     "react-addons-test-utils": "^0.14.7",
     "redux-devtools": "^3.1.1",
     "redux-devtools-dock-monitor": "^1.1.0",
     "redux-devtools-log-monitor": "^1.0.5",
     "redux-logger": "^2.6.1",
     "redux-promise": "^0.5.3",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.9.11",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.9.1"
