--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "node server.js",
     "lint": "node_modules/.bin/eslint --ext .js --ext .jsx ./**/*",
     "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register",
-    "test:watch": "npm test -- --watch"
+    "test:watch": "npm test -- --watch",
+    "dev": "webpack -d --watch",
+    "build": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -23,15 +25,21 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-runtime": "^6.6.1",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "react": "^0.14.7",
     "react-bootstrap": "^0.28.4",
+    "react-css-modules": "^3.7.6",
     "react-dom": "^0.14.7",
     "react-facebook-login": "^2.1.3",
+    "react-number-input": "^1.14.8",
     "react-redux": "^4.2.1",
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.0",
     "redux": "^3.2.1",
-    "redux-thunk": "^1.0.3"
+    "redux-thunk": "^1.0.3",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.5",
