--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-runtime": "^6.6.1",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "material-ui": "^0.15.0-alpha.2",
     "react": "^0.14.7",
     "react-bootstrap": "^0.28.4",
     "react-css-modules": "^3.7.6",
@@ -36,6 +37,7 @@
     "react-redux": "^4.2.1",
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.0",
+    "react-tap-event-plugin": "^0.2.2",
     "redux": "^3.2.1",
     "redux-thunk": "^1.0.3",
     "sass-loader": "^3.2.0",
