--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "redux-shopping-cart-example",
-  "version": "0.0.0",
-  "description": "Redux shopping-cart example",
+  "name": "HappyPolar",
+  "version": "0.1.0",
+  "description": "HappyPolar frontend",
   "scripts": {
     "start": "node server.js",
     "lint": "node_modules/.bin/eslint --ext .js --ext .jsx ./**/*",
@@ -25,16 +25,19 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-runtime": "^6.6.1",
+    "chart.js": "^1.1.1",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "material-ui": "^0.15.0-alpha.2",
     "react": "^0.14.7",
     "react-bootstrap": "^0.28.4",
+    "react-chartjs": "^0.7.3",
     "react-css-modules": "^3.7.6",
     "react-dom": "^0.14.7",
     "react-facebook-login": "^2.1.3",
     "react-number-input": "^1.14.8",
     "react-redux": "^4.2.1",
+    "react-refetch": "^1.0.0-beta.4",
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.0",
     "react-tap-event-plugin": "^0.2.2",
